# python_mentoring_program

./: docker-compose.yml  pyproject.toml
app/server/: app.py  database.py
app/server/models/: analysis_report.py
app/server/routes/: analysis_report.py
app/server/services/: analysis_report.py
homework/: setup.py
homework/text_analyzer/: main.py  text  text_analyzer.py  text_analyzer_cli.py
