[tool.poetry]
name = "text_analyzer"
version = "0.1.0"
description = ""
authors = ["Vladyslav Lakhai <vlad.luckhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
beanie = "^1.11.12"
requests = "^2.28.1"
grequests = "^0.6.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
